feat: establish v1 patient module
